--- a/.github/workflows/blogpost-workflow.yml
+++ b/.github/workflows/blogpost-workflow.yml
@@ -14,6 +14,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Pull in hashnode posts
-        uses: Sagar2366/blog-post-workflow@v1
+        uses: gautamkrishnar/blog-post-workflow@master
         with:
-          feed_list: "https://hashnode.com/feed/Sutekar"
+          comment_tag_name: "BLOGPOSTS"
+          template: "$newline - $randomEmoji(💯,🔥,💫,🚀,🌮) [$title]($url)"
+          commit_message: "recent posts section updated"
+          feed_list: "https://Sutekar.hashnode.dev/rss.xml"
+
