--- a/.github/workflows/blogpost-workflow.yml
+++ b/.github/workflows/blogpost-workflow.yml
@@ -19,5 +19,5 @@ jobs:
           comment_tag_name: "BLOGPOSTS"
           template: "$newline - $randomEmoji(💯,🔥,💫,🚀,🌮) [$title]($url)"
           commit_message: "recent posts section updated"
-          feed_list: "https://Sutekar.hashnode.dev/rss.xml"
+          feed_list: "https://getfitwithsagar.hashnode.dev/rss.xml"
 
