--- a/.github/workflows/blogpost-workflow.yml
+++ b/.github/workflows/blogpost-workflow.yml
@@ -17,7 +17,7 @@ jobs:
         uses: gautamkrishnar/blog-post-workflow@master
         with:
           comment_tag_name: "BLOGPOSTS"
-          template: "$newline - $randomEmoji(💯,🔥,💫,🚀,🌮) [$title]($url)"
+          template: "$newline - $randomEmoji(🚀) [$title]($url)"
           commit_message: "recent posts section updated"
           feed_list: "https://getfitwithsagar.hashnode.dev/rss.xml"
 
